--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,6 +52,7 @@ html {
 body {
   height: 100%;
   min-width: 320px;
+  overflow-x: hidden;
   font-family: var(--font-sans);
   font-size: 16px;
   line-height: 1.6;
